Add the body copy

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
   <meta charset="utf-8">
   <title>Just your type</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Vollkorn" rel="stylesheet">
+  <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
-  <link href="css/modules.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+
+  <div>
+    <h1>imagine</h1>
+    <p>if we had a choice</p>
+    <p>yeah, I bet we'd</p>
+    <h2>add</add>
+    <p>fuel to the fire.</p>
+  </div>
 
 </body>
 </html>
