--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
 
   <div class="grid">
-    <div class="text-center unit xs-1 s-1 m-1 l-1-2">
-      <h1 class="giga dancing">imagine</h1>
+
+    <div class="absolute pin-center-bottom">
+      <div class="pad-t text-center unit xs-1 s-1 m-1 l-1-2">
+        <h1 class="giga dancing">imagine</h1>
+        <p class="mega vollkorn">if we had a choice</p>
+      </div>
+      <div class="text-center unit xs-1 s-1 m-1 l-1-2">
+        <p class="mega vollkorn">yeah, I bet we'd</p>
+        <h2 class="giga dancing">add</h2>
+        <p class="mega vollkorn">fuel to the fire.</p>
+      </div>
+      <div>
+        <span class="left relative dot unit xs-1 s-1 m-1 l-1"></span>
+      </div>
     </div>
-    <div class="text-center unit xs-1 s-1 m-1 l-1-2">
-      <p class="mega vollkorn">if we had a choice</p>
-    </div>
-    <div class="text-center unit xs-1 s-1 m-1 l-1-2">
-      <p class="mega vollkorn">yeah, I bet we'd</p>
-      <h2 class="giga dancing">add</h2>
-      <p class="mega vollkorn">fuel to the fire.</p>
-    </div>
-    <div>
-      <span class="dot"></span>
-    </div>
-  </div>
 
 </body>
 </html>
