--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
 </head>
 <body>
 
-  <div class="grid">
+  <main>
 
-    <div class="absolute pin-center-bottom">
-      <div class="pad-t text-center unit xs-1 s-1 m-1 l-1-2">
-        <h1 class="giga dancing">imagine</h1>
-        <p class="mega vollkorn">if we had a choice</p>
+    <div class="grid">
+      <div class="unit circle">
+        <div class="pad-t-2 text-center unit xs-1 s-1 m-1 l-1-2">
+          <h1 class="giga dancing">imagine</h1>
+          <p class="mega vollkorn">if we had a choice</p>
+        </div>
       </div>
-      <div class="text-center unit xs-1 s-1 m-1 l-1-2">
-        <p class="mega vollkorn">yeah, I bet we'd</p>
-        <h2 class="giga dancing">add</h2>
-        <p class="mega vollkorn">fuel to the fire.</p>
-      </div>
-      <div>
-        <span class="left relative dot unit xs-1 s-1 m-1 l-1"></span>
+      <div class="unit circle xs-0 s-0 m-0 l-1-2">
+        <div class="text-center unit xs-1 s-1 m-1 l-1-2">
+          <p class="mega vollkorn">yeah, I bet we'd</p>
+          <h2 class="giga dancing">add</h2>
+          <p class="mega vollkorn">fuel to the fire.</p>
+        </div>
       </div>
     </div>
+  </main>
 
 </body>
 </html>
