--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 </head>
 <body>
 
-  <main>
+  <main class="grid">
 
-    <div class="grid">
+    <div class="unit circle-1 l-1-2">
       <div class="pad-t-2 text-center unit xs-1 s-1 m-1 l-1-2">
         <h1 class="giga dancing">imagine</h1>
         <p class="mega vollkorn">if we had a choice</p>
       </div>
+    </div>
+    <div class="unit circle-2 xs-0 s-0 m-0 l-1-2">
       <div class="text-center unit xs-1 s-1 m-1 l-1-2">
         <p class="mega vollkorn">yeah, I bet we'd</p>
         <h2 class="giga dancing">add</h2>
