--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
 
   <main class="grid">
 
-    <div class="unit circle-1 l-1-2">
-      <div class="pad-t-2 text-center unit xs-1 s-1 m-1 l-1-2">
+    <div class="unit unit-l-content-center-vertical circle-1 l-1-2">
+      <div class="pad-t-1-2 text-center unit xs-1 s-1 m-1 l-1-2">
         <h1 class="giga dancing">imagine</h1>
         <p class="mega vollkorn">if we had a choice</p>
       </div>
+      <div class="pad-t-1-4 text-center unit xs-1 s-1 m-1 l-0 xl-0">
+        <p class="mega vollkorn">yeah, I bet we'd</p>
+        <h2 class="giga dancing">add</h2>
+        <p class="mega vollkorn">fuel to the fire.</p>
+      </div>
     </div>
-    <div class="unit circle-2 xs-0 s-0 m-0 l-1-2">
-      <div class="text-center unit xs-1 s-1 m-1 l-1-2">
+    <div class="unit unit-l-content-center-vertical circle-2 xs-0 s-0 m-0 l-1-2">
+      <div class="text-center unit xs-0 s-0 m-0 l-1-2">
         <p class="mega vollkorn">yeah, I bet we'd</p>
         <h2 class="giga dancing">add</h2>
         <p class="mega vollkorn">fuel to the fire.</p>
