Add padding to the paragraph in the second div

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h1 class="giga dancing">imagine</h1>
         <p class="mega vollkorn">if we had a choice</p>
       </div>
-      <div class="pad-t-1-4 text-center unit xs-1 s-1 m-1 l-0 xl-0">
-        <p class="mega vollkorn">yeah, I bet we'd</p>
+      <div class="text-center unit xs-1 s-1 m-1 l-0 xl-0">
+        <p class="pad-t mega vollkorn">yeah, I bet we'd</p>
         <h2 class="giga dancing">add</h2>
         <p class="mega vollkorn">fuel to the fire.</p>
       </div>
