--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <main class="grid">
 
-    <div class="unit unit-l-content-center-vertical circle-1 l-1-2">
+    <div class="unit unit-xs-centered unit-l-content-center-vertical circle-1 l-1-2">
       <div class="pad-t-1-2 text-center unit xs-1 s-1 m-1 l-1-2">
         <h1 class="giga dancing">imagine</h1>
         <p class="mega vollkorn">if we had a choice</p>
@@ -25,9 +25,9 @@
         <p class="mega vollkorn">fuel to the fire.</p>
       </div>
     </div>
-    <div class="unit unit-l-content-center-vertical circle-2 xs-0 s-0 m-0 l-1-2">
+    <div class="unit unit-xs-centered unit-l-content-center-vertical circle-2 xs-0 s-0 m-0 l-1-2">
       <div class="text-center unit xs-0 s-0 m-0 l-1-2">
-        <p class="mega vollkorn">yeah, I bet we'd</p>
+        <p class="pad-t mega vollkorn">yeah, I bet we'd</p>
         <h2 class="giga dancing">add</h2>
         <p class="mega vollkorn">fuel to the fire.</p>
       </div>
