--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <main class="grid">
 
-    <div class="unit unit-xs-centered unit-l-content-center-vertical circle-1 l-1-2">
+    <div class="unit unit-xs-centered unit-s-centered unit-l-content-center-vertical circle-1 l-1-2">
       <div class="pad-t-1-2 text-center unit xs-1 s-1 m-1 l-1-2">
         <h1 class="giga dancing">imagine</h1>
         <p class="mega vollkorn">if we had a choice</p>
