--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="mega vollkorn">if we had a choice</p>
       </div>
       <div class="text-center unit xs-1 s-1 m-1 l-0 xl-0">
-        <p class="pad-t mega vollkorn">yeah, I bet we'd</p>
+        <p class="border center-block pad-t mega vollkorn">yeah, I bet we'd</p>
         <h2 class="giga dancing">add</h2>
         <p class="mega vollkorn">fuel to the fire.</p>
       </div>
