Add a larger padding class to the main element

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <main class="grid pad-t">
+  <main class="grid pad-t-2">
 
     <div class="unit unit-xs-centered unit-s-centered unit-l-content-center-vertical circle-1 l-1-2">
       <div class="pad-t-1-2 text-center unit xs-1 s-1 m-1 l-1-2">
