--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <p class="mega vollkorn">if we had a choice</p>
       </div>
       <div class="text-center unit xs-1 s-1 m-1 l-0 xl-0">
-        <p class="border center-block pad-t mega vollkorn">yeah, I bet</p>
-        <h2 class="giga dancing">we'd add</h2>
+        <p class="border center-block pad-t mega vollkorn">yeah, I bet we'd</p>
+        <h2 class="giga dancing">add</h2>
         <p class="mega vollkorn">fuel to the fire.</p>
       </div>
     </div>
     <div class="unit unit-xs-centered unit-l-content-center-vertical circle-2 xs-0 s-0 m-0 l-1-2">
       <div class="text-center unit xs-0 s-0 m-0 l-1-2">
-        <p class="pad-t mega vollkorn">yeah, I bet</p>
-        <h2 class="giga dancing">we'd add</h2>
+        <p class="pad-t mega vollkorn">yeah, I bet we'd</p>
+        <h2 class="giga dancing">add</h2>
         <p class="mega vollkorn">fuel to the fire.</p>
       </div>
     </div>
